--- a/EventBooking/Views/Events/Create.cshtml
+++ b/EventBooking/Views/Events/Create.cshtml
@@ -44,18 +44,26 @@
                         </div>
 
                         <div class="row mb-4">
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <label asp-for="EventDate" class="form-label fw-bold small">When is it happening?</label>
                                 <input asp-for="EventDate" class="form-control" type="datetime-local" />
                                 <span asp-validation-for="EventDate" class="text-danger small"></span>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <label asp-for="Price" class="form-label fw-bold small">Ticket Value (£)</label>
                                 <div class="input-group">
                                     <span class="input-group-text bg-light border-end-0">£</span>
                                     <input asp-for="Price" class="form-control border-start-0 ps-0" type="number" step="0.01" min="0" placeholder="e.g. 50.00" />
                                 </div>
                                 <span asp-validation-for="Price" class="text-danger small"></span>
+                            </div>
+                            <div class="col-md-4">
+                                <label asp-for="Capacity" class="form-label fw-bold small">Total Seats</label>
+                                <div class="input-group">
+                                    <span class="input-group-text bg-light border-end-0"><i class="fas fa-users"></i></span>
+                                    <input asp-for="Capacity" class="form-control border-start-0 ps-2" type="number" min="1" max="100000" placeholder="e.g. 100" />
+                                </div>
+                                <span asp-validation-for="Capacity" class="text-danger small"></span>
                             </div>
                         </div>
 
